refactoring 1.3 test totalcost
